[package]
name = "fetch_iplist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
ipnet = { version = "2", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
