[package]
name = "fetch_iplist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
ipnet = { version = "2", features = ["serde"] }
log = "0.4"
nix = { version = "0.24", features = ["fs", "user"] }
reqwest = { version = "0.11", features = ["blocking"] }
simple_logger = "2"
syslog = "6"
tempfile = "3.3"
